--- a/cropchat/package.json
+++ b/cropchat/package.json
@@ -13,8 +13,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "firebase": "^4.2.0",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-material": "^0.7.4",
+    "vue-router": "^2.3.1",
+    "vuefire": "^1.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
